--- a/css/index.css
+++ b/css/index.css
@@ -15,10 +15,10 @@ html {
 
 body {
   margin: 0;
+  background-color: var(--mainblack);
 }
 
 header {
-  background-color: var(--mainblack);
   width: 100%;
   height: 100vh;
   font-family: 'Courier New', Courier, monospace;
@@ -46,6 +46,17 @@ header svg {
           animation: tramsformrotate 8s infinite linear;
 }
 
+header .header-text {
+  font-size: 4rem;
+  color: #61DAFB;
+}
+
+header .react-text {
+  font-size: 5.5rem;
+  text-align: center;
+  font-weight: bolder;
+}
+
 @-webkit-keyframes tramsformrotate {
   from {
     -webkit-transform: rotate(0);
@@ -68,30 +79,136 @@ header svg {
   }
 }
 
-header .header-text {
-  font-size: 4rem;
-  color: #61DAFB;
-}
-
-header .react-text {
-  font-size: 5.5rem;
-  text-align: center;
-  font-weight: bolder;
-}
-
-nav svg {
-  fill: #00D8FF;
-  -webkit-animation: 0;
-          animation: 0;
-  position: absolute;
+nav {
+  position: fixed;
   top: 0;
-  right: 3vh;
-  width: 10%;
-  height: 10%;
+  width: 100vw;
+  background-color: #282c34;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-transform: uppercase;
+  -webkit-box-shadow: 0px -5px 5px -5px black inset;
+          box-shadow: 0px -5px 5px -5px black inset;
 }
 
-nav:hover {
+nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  list-style-type: none;
+  list-style: none;
+}
+
+nav ul li {
+  padding: 0 50px;
+  color: white;
+}
+
+nav ul li a {
+  color: var(--mainwhite);
+  font-weight: bolder;
+  text-decoration: none;
+}
+
+nav ul li a:hover {
+  color: #61dafb;
   cursor: pointer;
+}
+
+.NoOpacity {
+  -webkit-animation: TransormingTo 0.4s linear forwards;
+          animation: TransormingTo 0.4s linear forwards;
+}
+
+@-webkit-keyframes TransormingTo {
+  from {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  to {
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
+  }
+}
+
+@keyframes TransormingTo {
+  from {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  to {
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
+  }
+}
+
+.YeOpacity {
+  -webkit-animation: TransormingFor 0.4s linear forwards;
+          animation: TransormingFor 0.4s linear forwards;
+}
+
+@-webkit-keyframes TransormingFor {
+  from {
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
+  }
+  to {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+}
+
+@keyframes TransormingFor {
+  from {
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
+  }
+  to {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+}
+
+.documentation {
+  margin: 800px 0;
+}
+
+.block-1 ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.list-item {
+  list-style: none;
+  margin: 0 200px;
+}
+
+.list-item a {
+  text-decoration: none;
+  color: white;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: var(--mainblack);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #616469;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  background-color: var(--mainblack);
 }
 
 @media screen and (min-device-width: 1200px) {
@@ -99,8 +216,11 @@ nav:hover {
     width: 30%;
     height: 30%;
   }
-  nav svg {
-    display: none;
+}
+
+@media screen and (max-device-width: 1200px) {
+  nav {
+    opacity: 0;
   }
 }
 /*# sourceMappingURL=index.css.map */
