--- a/css/index.scss
+++ b/css/index.scss
@@ -14,10 +14,11 @@ html {
 
 body {
     margin: 0;
+    background-color: var(--mainblack);
 }
 
+
 header {
-    background-color: var(--mainblack);
     width: 100%;
     height: 100vh;
     font-family: 'Courier New', Courier, monospace;
@@ -34,16 +35,6 @@ header {
         animation: tramsformrotate 8s infinite linear;
     }
 
-    @keyframes tramsformrotate {
-        from {
-            transform: rotate(0);
-        }
-
-        to {
-            transform: rotate(-1turn);
-        }
-    }
-
     .header-text {
         font-size: 4rem;
         color: #61DAFB;
@@ -54,22 +45,108 @@ header {
         text-align: center;
         font-weight: bolder;
     }
+
+    @keyframes tramsformrotate {
+        from {
+            transform: rotate(0);
+        }
+
+        to {
+            transform: rotate(-1turn);
+        }
+    }
 }
 
 nav {
-    svg {
-        fill: #00D8FF;
-        animation: 0;
-        position: absolute;
-        top: 0;
-        right: 3vh;
-        width: 10%;
-        height: 10%;
-    }
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    background-color: rgb(40, 44, 52);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-transform: uppercase;
+    box-shadow: 0px -5px 5px -5px black inset;
 
-    &:hover {
-        cursor: pointer;
+    ul {
+        display: flex;
+        justify-content: space-evenly;
+        list-style-type: none;
+        list-style: none;
+
+        li {
+            padding: 0 50px;
+            color: white;
+
+            a {
+                color: var(--mainwhite);
+                font-weight: bolder;
+                text-decoration: none;
+
+                &:hover {
+                    color: #61dafb;
+                    cursor: pointer;
+                }
+            }
+        }
     }
+}
+.NoOpacity{
+    animation: TransormingTo 0.4s linear forwards;
+    @keyframes TransormingTo{
+        from{
+            transform: translateY(0%);
+        }
+        to{
+            transform: translateY(-100%);
+        }
+    }
+}
+
+.YeOpacity{
+    animation: TransormingFor 0.4s linear forwards;
+    @keyframes TransormingFor{
+        from{
+            transform: translateY(-100%);
+        }
+        to{
+            transform: translateY(0%);
+        }
+    }
+}
+
+
+.documentation {
+    margin: 800px 0;
+}
+
+.block-1 ul {
+    display: flex;
+    justify-content: center;
+}
+
+.list-item {
+    list-style: none;
+    margin: 0 200px;
+
+    a {
+        text-decoration: none;
+        color: white;
+    }
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    background-color: var(--mainblack);
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: rgb(97, 100, 105) ;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    background-color: var(--mainblack);
 }
 
 @media screen and (min-device-width:1200px) {
@@ -79,15 +156,10 @@ nav {
             height: 30%;
         }
     }
-
-    nav {
-        svg {
-            display: none;
-        }
-    }
 }
 
-// @media only screen and (max-device-width : 768px) and (orientation : portrait) {
-//     .alert {
-//         display: block
-//     }
+@media screen and (max-device-width:1200px){
+    nav{
+        opacity: 0;
+    }
+}
