--- a/css/index.scss
+++ b/css/index.scss
@@ -2,6 +2,7 @@
     --mainblack: rgb(32, 35, 42);
     --mainblue: rgb(97, 218, 251);
     --mainwhite: rgb(247, 247, 247);
+    --fontMonospace-Corier: 'Courier New', Courier, monospace;
 }
 
 html {
@@ -16,7 +17,6 @@ body {
     margin: 0;
     background-color: var(--mainblack);
 }
-
 
 header {
     width: 100%;
@@ -89,49 +89,104 @@ nav {
         }
     }
 }
-.NoOpacity{
-    animation: TransormingTo 0.4s linear forwards;
-    @keyframes TransormingTo{
-        from{
+
+.NoOpacity {
+    animation: TransormingTo 0.5s linear forwards;
+
+    @keyframes TransormingTo {
+        from {
             transform: translateY(0%);
         }
-        to{
+
+        to {
             transform: translateY(-100%);
         }
     }
 }
 
-.YeOpacity{
-    animation: TransormingFor 0.4s linear forwards;
-    @keyframes TransormingFor{
-        from{
+.YeOpacity {
+    animation: TransormingFor 0.5s linear forwards;
+
+    @keyframes TransormingFor {
+        from {
             transform: translateY(-100%);
         }
-        to{
+
+        to {
             transform: translateY(0%);
         }
     }
 }
 
+.block-1 {
+    ul {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        max-width: 80%;
+        margin: 0 auto;
+        color: var(--mainwhite);
 
-.documentation {
-    margin: 800px 0;
-}
+        .list-item {
+            list-style-type: none;
+            margin: 0 200px;
+            font-weight: bolder;
+            margin-bottom: 2rem;
 
-.block-1 ul {
-    display: flex;
-    justify-content: center;
-}
+            a {
+                text-decoration: none;
+                color: white;
 
-.list-item {
-    list-style: none;
-    margin: 0 200px;
+                &:hover {
+                    color: #61dafb;
+                    cursor: pointer;
+                }
 
-    a {
-        text-decoration: none;
-        color: white;
+                &:visited {
+                    color: rgb(167, 167, 167);
+                }
+            }
+
+            &::before {
+                content: attr(count-item) " ";
+                padding: 2px;
+            }
+        }
     }
 }
+
+/*                     Для документации!!                    */
+
+.main {
+    max-width: 70%;
+    margin: 0 auto;
+    color: var(--mainwhite);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 600;
+    font-size: 1.2rem;
+}
+
+h1 {
+    text-align: center;
+    font-size: 3rem;
+}
+
+p {
+    text-align: justify;
+    text-align-last: center;
+}
+
+.block-border {
+    border: 5px var(--mainblue) solid;
+    border-radius: 15px;
+    li {
+        font-size: 1rem;
+        margin: 1rem 0;
+    }
+}
+
+/*                     Медиа запросы и другое!!                    */
+
 
 ::-webkit-scrollbar {
     width: 10px;
@@ -140,7 +195,7 @@ nav {
 
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    background-color: rgb(97, 100, 105) ;
+    background-color: rgb(97, 100, 105);
 }
 
 ::-webkit-scrollbar-track {
@@ -158,8 +213,8 @@ nav {
     }
 }
 
-@media screen and (max-device-width:1200px){
-    nav{
+@media screen and (max-device-width:1200px) {
+    nav {
         opacity: 0;
     }
 }
