--- a/css/index.css
+++ b/css/index.css
@@ -207,11 +207,6 @@ nav ul li a:hover {
   color: #a7a7a7;
 }
 
-.block-1 ul li::before {
-  content: attr(count-item) " ";
-  padding: 2px;
-}
-
 /*                     Для документации!!                    */
 .main {
   max-width: 70%;
@@ -219,7 +214,7 @@ nav ul li a:hover {
   color: var(--mainwhite);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 600;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 }
 
 h1 {
@@ -230,6 +225,7 @@ h1 {
 p {
   text-align: justify;
   text-align-last: center;
+  text-justify: distribute;
 }
 
 .block-border {
@@ -238,8 +234,14 @@ p {
 }
 
 .block-border li {
-  font-size: 1rem;
   margin: 1rem 0;
+}
+
+.img-nodejs {
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 15px;
 }
 
 /*                     Медиа запросы и другое!!                    */
@@ -268,12 +270,15 @@ p {
 }
 
 @media screen and (max-device-width: 1200px) and (orientation: portrait) {
-  nav {
+  header nav {
     opacity: 0;
   }
   header svg {
     position: relative;
     top: -4.5vh;
+  }
+  .main {
+    max-width: 95%;
   }
 }
 
