--- a/css/index.scss
+++ b/css/index.scss
@@ -145,11 +145,6 @@ nav {
                     color: rgb(167, 167, 167);
                 }
             }
-
-            &::before {
-                content: attr(count-item) " ";
-                padding: 2px;
-            }
         }
     }
 }
@@ -162,7 +157,7 @@ nav {
     color: var(--mainwhite);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 600;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
 }
 
 h1 {
@@ -173,15 +168,21 @@ h1 {
 p {
     text-align: justify;
     text-align-last: center;
+    text-justify: distribute;
 }
 
 .block-border {
     border: 5px var(--mainblue) solid;
     border-radius: 15px;
     li {
-        font-size: 1rem;
         margin: 1rem 0;
     }
+}
+.img-nodejs{
+    display:block; 
+    width: 100%;
+    margin: 0 auto; 
+    border-radius: 15px;
 }
 
 /*                     Медиа запросы и другое!!                    */
@@ -213,7 +214,7 @@ p {
 }
 
 @media screen and (max-device-width:1200px) and (orientation: portrait) {
-    nav {
+    header nav{
         opacity: 0;
     }
     header{
@@ -221,6 +222,10 @@ p {
             position: relative;
             top: -4.5vh;
         }
+    }
+    .main{
+        max-width: 95%;
+
     }
 }
 @media screen and (max-device-width:1200px) and (orientation: landscape) {
