--- a/css/index.css
+++ b/css/index.css
@@ -115,6 +115,7 @@ nav ul li a {
 nav ul li a:hover {
   color: #61dafb;
   cursor: pointer;
+  border-bottom: 2px solid var(--mainblue);
 }
 
 .NoOpacity {
@@ -223,14 +224,13 @@ h1 {
 }
 
 p {
-  text-align: justify;
-  text-align-last: center;
-  text-justify: distribute;
+  text-align: center;
 }
 
 .block-border {
   border: 5px var(--mainblue) solid;
   border-radius: 15px;
+  padding: 1vh;
 }
 
 .block-border li {
@@ -279,6 +279,7 @@ p {
   }
   .main {
     max-width: 95%;
+    font-weight: 500;
   }
   .block-1 ul li {
     font-size: 4.5rem;
@@ -294,6 +295,10 @@ p {
 @media screen and (min-device-width: 1800px) {
   .block-1 ul {
     max-width: 70%;
+  }
+  .main {
+    font-weight: bolder;
+    font-size: 1.8rem;
   }
 }
 /*# sourceMappingURL=index.css.map */
