--- a/css/index.scss
+++ b/css/index.scss
@@ -69,11 +69,9 @@ nav {
         justify-content: space-evenly;
         list-style-type: none;
         list-style: none;
-
         li {
             padding: 0 50px;
             color: white;
-
             a {
                 color: var(--mainwhite);
                 font-weight: bolder;
@@ -82,6 +80,7 @@ nav {
                 &:hover {
                     color: #61dafb;
                     cursor: pointer;
+                    border-bottom: 2px solid var(--mainblue);
                 }
             }
         }
@@ -166,14 +165,13 @@ h1 {
 }
 
 p {
-    text-align: justify;
-    text-align-last: center;
-    text-justify: distribute;
+    text-align: center;
 }
 
 .block-border {
     border: 5px var(--mainblue) solid;
     border-radius: 15px;
+    padding: 1vh;
 
     li {
         margin: 1rem 0;
@@ -188,7 +186,6 @@ p {
 }
 
 /*                     Медиа запросы и другое!!                    */
-
 
 ::-webkit-scrollbar {
     width: 10px;
@@ -229,6 +226,7 @@ p {
 
     .main {
         max-width: 95%;
+        font-weight: 500;
     }
 
     .block-1 {
@@ -251,5 +249,9 @@ p {
         ul {
             max-width: 70%;
         }
+    }
+    .main{
+        font-weight: bolder;
+        font-size: 1.8rem;
     }
 }
