modified:   css/index.css 	modified:   html/NodeJS.html 	new file:   html/installNodeJS.html 	new file:   images/1lesson/error.jpg 	new file:   images/1lesson/react_installing.jpg 	modified:   index.html

--- a/css/index.css
+++ b/css/index.css
@@ -244,6 +244,20 @@ p {
   border-radius: 15px;
 }
 
+.img-react_installing {
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 15px;
+}
+
+.img-error_folder {
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 15px;
+}
+
 /*                     Медиа запросы и другое!!                    */
 ::-webkit-scrollbar {
   width: 10px;
