modified:   css/index.css 	modified:   html/IndexAppJsx.html 	new file:   images/2lesson/basicApp.jpg 	modified:   index.html

--- a/css/index.css
+++ b/css/index.css
@@ -258,6 +258,12 @@ p {
   margin: 0 auto;
   border-radius: 15px;
 }
+.img-basic_app {
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 15px;
+}
 
 /*                     Медиа запросы и другое!!                    */
 ::-webkit-scrollbar {
