modified:   css/index.css 	modified:   html/IndexAppJsx.html 	new file:   html/component.html 	modified:   images/2lesson/basicApp.jpg 	new file:   images/3lesson/compincomp.jpg 	new file:   images/3lesson/componentApp.jpg 	modified:   index.html

--- a/css/index.css
+++ b/css/index.css
@@ -264,7 +264,18 @@ p {
   margin: 0 auto;
   border-radius: 15px;
 }
-
+.img-componentapp {
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 15px;
+}
+.img-compincomp {
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 15px;
+}
 /*                     Медиа запросы и другое!!                    */
 ::-webkit-scrollbar {
   width: 10px;
