--- a/css/index.css
+++ b/css/index.css
@@ -57,6 +57,37 @@ header .react-text {
   font-weight: bolder;
 }
 
+footer{
+    margin: 1rem;
+}
+
+footer div{
+    display: flex;
+    justify-content: space-around;
+}
+
+footer div a {
+    margin: 10px;
+    padding: 10px;
+    text-decoration: none;
+    border-top: 10px solid;
+    border-right: 10px solid;
+    border-color: rgba(97, 218, 251, 1);;
+    color: white;
+    font-size: 2rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
+    font-weight: 500;
+}
+
+#rightArrow {
+    transform: rotate(45deg);
+}
+
+#leftArrow {
+    transform: rotate(-135deg);
+}
+
 @-webkit-keyframes tramsformrotate {
   from {
     -webkit-transform: rotate(0);
